<resources>
    <string name="app_name" translatable="false">ColemanJustin_DVP6Project</string>

    <!-- Login/Signup -->
    <string name="emailLabel">Email</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="loginLabel">Login</string>
    <string name="signupLabel">Signup</string>
    <string name="signupBtn">Signup</string>
    <string name="loginBtn">Login</string>
    <string name="noaccount">No account yet? Create One</string>
    <string name="haveaccount">Have an account? Log in</string>
    <string name="alertTitle">Invalid</string>
    <string name="authenticating">Authenticating...</string>
    <string name="notfound">Not Found</string>
    <string name="notfoundMsg">No user with that email was found.</string>
    <string name="incorrectpassword">Incorrect Password</string>
    <string name="incorrectpasswordMsg">That password was incorrect. Try resetting your password.</string>
    <string name="ok">OK</string>
    <string name="exists">Not Available</string>
    <string name="existsMsg">An account with that email already exists.</string>
    <string name="emailError">Not a valid email address e.g. example@email.com</string>
    <string name="usernameError">Requires at least 6 characters</string>

    <!-- Conversations -->
    <string name="messages_title">Messages</string>
    <string name="emptyMessages">Start Chatting. Click the + to get started.</string>
    <string name="newConvo">New Conversation</string>

    <!-- Search -->
    <string name="search_hint">Search</string>
    <string name="noresults">No Results</string>
    <string name="No">NO</string>
    <string name="Yes">YES</string>
    <string name="startConvo">Start Conversation with</string>

    <!-- Messaging -->
    <string name="inputbar_hint">Enter a message...</string>
    <string name="voice_prompt">Say Something Nice</string>
    <string name="voiceunavailable">Speech Recognition Unavailable</string>
    <string name="permissiontitle">Permission Required</string>
    <string name="permissionmsg">Access to your external storage is required to send image messages.</string>
    <string name="tryagain">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="delete_convo">Delete Conversation?</string>
    <string name="image_name">Image</string>
    <string name="activeLabel">Last Seen:</string>
    <string name="online_status">Online</string>
    <string name="unavailable_status">Unavailable</string>
    <string name="progress">Uploading...</string>
    <string name="imageerrortitle">Whoops!</string>
    <string name="imageerror">Message could not be sent</string>
    <string name="textDetect">Text Found In This Image:</string>
    <array name="othermessages">
        <item>Image</item>
        <item>Voice</item>
        <item>Cancel</item>
    </array>

    <!-- Date Headers -->
    <string name="date_header_yesterday">Yesterday</string>
    <string name="date_header_now">just now</string>
    <string name="date_header_minute">a minute ago</string>
    <string name="date_header_minutes">minutes ago</string>
    <string name="date_header_hour">an hour ago</string>
    <string name="date_header_hours">hours ago</string>

    <!-- Main Menu Titles -->
    <string name="account">Account</string>
    <string name="settings">Settings</string>

    <!-- Message Menu Titles -->
    <string name="members">Members</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>

    <!-- Transitions -->
    <string name="logo" translatable="false">logo</string>
    <string name="userID" translatable="false">ID</string>
    <string name="displayname" translatable="false">name</string>
    <string name="btn" translatable="false">button</string>
    <string name="link" translatable="false">link</string>

    <!-- Google APIs -->
    <string name="apiKey" translatable="false">AIzaSyAw9LRxbCzzZEeHoSaJx5XJFv0ULG5rd80</string>

    <!-- SendBird -->
    <string name="APP_ID" translatable="false">C5B1EC71-C373-4568-B634-EF2BEEAB8228</string>

    <!-- API.ai -->
    <string name="apiaiDevKey">f5d4e355a4104febbc8bba8fb72579a2</string>
    <string name="apiaiClientKey">ce7c699ee2514d9b8632cb27af98d736</string>

</resources>
