<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginView"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">


        <ImageView android:id="@+id/logo"
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:transitionName="@string/logo"/>

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/emailLabel"
                android:textColor="@color/white"
                android:transitionName="@string/userID"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/passwordLabel"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                android:transitionName="@string/displayname"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/connectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:transitionName="@string/btn"/>

        <TextView
            android:id="@+id/toSignupLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noaccount"
            android:textSize="16sp"
            android:padding="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:transitionName="@string/link"/>
    </LinearLayout>

</ScrollView>